--- a/libPlayer/src/main/res/layout/v2_slider_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_slider_panel.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="5dp"
         >
-        <io.github.toyota32k.video.view.ChapterView
+        <io.github.toyota32k.lib.player.view.ChapterView
             android:id="@+id/chapter_view"
             android:layout_width="match_parent"
             android:layout_height="8dp"
