--- a/libPlayer/src/main/res/layout/v2_control_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_control_panel.xml
@@ -194,71 +194,65 @@
                 android:contentDescription="@string/desc_close_button" />
         </LinearLayout>
     </io.github.toyota32k.viewex.library.Viewbox>
-    <LinearLayout
-        android:id="@+id/slider_panel"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/counter_label"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/control_buttons_viewbox"
+        android:layout_width="wrap_content"
+        android:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@id/slider_panel"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="-14dp"
+        tools:text="00:00.00"
+        />
+    <TextView
+        android:id="@+id/duration_label"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:fontFamily="monospace"
+        app:layout_constraintBottom_toTopOf="@id/slider_panel"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="-14dp"
+        tools:text="99:99.00"
+        />
+
+    <FrameLayout
+        android:id="@+id/slider_panel"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         >
-        <TextView
-            android:id="@+id/counter_label"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:fontFamily="monospace"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            tools:text="00:00"
+        <io.github.toyota32k.lib.player.view.ChapterView
+            android:id="@+id/chapter_view"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginHorizontal="14dp"
+            app:enabledColor="?attr/colorSecondary"
+            app:tickColor="?attr/colorOnSecondary"
+            app:markerColor="?attr/colorSecondary"
+            app:bar_height="4dp"
+            app:bar_marker_margin="4dp"
+
             />
-        <FrameLayout
-            android:layout_width="0dp"
+        <com.google.android.material.slider.Slider
+            android:id="@+id/slider"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="5dp"
-            >
-            <io.github.toyota32k.lib.player.view.ChapterView
-                android:id="@+id/chapter_view"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginHorizontal="14dp"
-                app:enabledColor="?attr/colorSecondary"
-                app:tickColor="?attr/colorOnSecondary"
-                app:markerColor="?attr/colorSecondary"
-                app:bar_height="4dp"
-                app:bar_marker_margin="4dp"
+            android:paddingHorizontal="0dp"
+            app:labelBehavior="gone"
+            app:thumbRadius="8dp"
+            app:thumbColor="#4000"
+            app:thumbStrokeColor="#222"
+            app:thumbStrokeWidth="1dp"
 
-                />
-            <com.google.android.material.slider.Slider
-                android:id="@+id/slider"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="0dp"
-                app:labelBehavior="gone"
-                app:thumbRadius="8dp"
-                app:thumbColor="#4000"
-                app:thumbStrokeColor="#222"
-                app:thumbStrokeWidth="1dp"
-
-                />
-
-        </FrameLayout>
-        <TextView
-            android:id="@+id/duration_label"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:fontFamily="monospace"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="5dp"
-            tools:text="99:99"
             />
 
-    </LinearLayout>
+    </FrameLayout>
+
     <FrameLayout
         android:id="@+id/slider_guard"
         android:layout_width="0dp"
