feat: 専用スライダー（作りかけ）。。。なんか thumbWidth という attr名がエラーになる。build toolsのバグ？

--- a/libPlayer/src/main/res/values/attrs.xml
+++ b/libPlayer/src/main/res/values/attrs.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    <attr name="colorSurface" format="color"/>-->
-<!--    <attr name="colorOnSurface" format="color"/>-->
     <declare-styleable name="ExoPlayerHost">
-<!--        <attr name="playOnTouch" format="boolean" />-->
         <attr name="showControlBar" format="boolean"/>
         <attr name="fitParent" format="boolean"/>
         <attr name="playerBackground" format="color"/>
@@ -38,10 +35,33 @@
         <attr name="markerHeight" format="integer" />           <!-- Markerの高さ（無指定ならdrawableから取得） -->
         <attr name="markerHorizontalCenter" format="integer" />           <!-- Markerの左端から中央までの距離（無指定なら width/2） -->
 
+        <attr name="railRightColor" format="color" />           <!-- Railの未再生部分の色 -->
+        <attr name="railRightHeight" format="integer" />           <!-- Railの未再生部分の高さ -->
+        <attr name="railRightVerticalOffset" format="integer" />           <!-- ベースラインに対するRailの未再生部分の垂直方向オフセット -->
+        <attr name="railRightZOrder" format="integer" />           <!-- Railの未再生部分のZOrder -->
 
-        <attr name="railGuideColor" format="color" />           <!-- Railのガイド色 -->
-        <attr name="railGuideHeight" format="integer" />           <!-- Railのガイド高さ -->
-        <attr name="railVerticalOffset" format="integer" />           <!-- ベースラインに対するRailの垂直方向オフセット -->
-        <attr name="railZOrder" format="integer" />           <!-- RailのZOrder -->
+        <attr name="railLeftColor" format="color" />           <!-- Railの再生済み部分の色 -->
+        <attr name="railLeftHeight" format="integer" />           <!-- Railの再生済み部分の高さ -->
+        <attr name="railLeftVerticalOffset" format="integer" />           <!-- ベースラインに対するRailの再生済み部分の垂直方向オフセット -->
+        <attr name="railLeftZOrder" format="integer" />           <!-- Railの再生済み部分のZOrder -->
+
+        <attr name="rangeEnabledColor" format="color" />           <!-- 有効範囲の色 -->
+        <attr name="rangeEnabledHeight" format="integer" />           <!-- 有効範囲の高さ -->
+        <attr name="rangeEnabledVerticalOffset" format="integer" />           <!-- ベースラインに対する有効範囲の垂直方向オフセット -->
+        <attr name="rangeEnabledZOrder" format="integer" />           <!-- 有効範囲のZOrder -->
+
+        <attr name="rangeDisabledColor" format="color" />           <!-- 無効範囲の色 -->
+        <attr name="rangeDisabledHeight" format="integer" />           <!-- 無効範囲の高さ -->
+        <attr name="rangeDisabledVerticalOffset" format="integer" />           <!-- ベースラインに対する無効範囲の垂直方向オフセット -->
+        <attr name="rangeDisabledZOrder" format="integer" />           <!-- 無効範囲のZOrder -->
+
+        <attr name="rangeTickColor" format="color" />           <!-- Tickの色 -->
+        <attr name="rangeTickWidth" format="integer" />           <!-- Tickの幅 -->
+        <attr name="rangeTickHeight" format="integer" />           <!-- Tickの高さ -->
+        <attr name="rangeTickVerticalOffset" format="integer" />           <!-- ベースラインに対するTickの垂直方向オフセット -->
+        <attr name="rangeTickZOrder" format="integer" />           <!-- TickのZOrder -->
+
+        <attr name="showChapterBar" format="boolean" />           <!-- Chaper Bar (RangeBar) を表示するか（デフォルト:true） -->
     </declare-styleable>
+
 </resources>
