--- a/libPlayer/src/main/res/layout/v2_slider_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_slider_panel.xml
@@ -25,23 +25,10 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="5dp"
         >
-        <io.github.toyota32k.lib.player.view.ChapterView
-            android:id="@+id/chapter_view"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginHorizontal="14dp"
-            app:enabledColor="?attr/colorSecondary"
-            app:tickColor="?attr/colorOnSecondary"
-            />
-        <com.google.android.material.slider.Slider
-            android:id="@+id/slider"
+        <io.github.toyota32k.lib.player.view.PlayerSlider
+            android:id="@+id/player_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="0dp"
-            android:layout_marginTop="-18dp"
-            app:labelBehavior="gone"
-            app:thumbColor="?attr/colorPrimaryVariant"
             />
 
     </LinearLayout>
