--- a/libPlayer/src/main/res/layout/v2_slider_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_slider_panel.xml
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/slider_panel_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     >
     <TextView
         android:id="@+id/counter_label"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:fontFamily="monospace"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="5dp"
-        tools:text="00:00"
+        tools:text="00:00:00"
         />
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="5dp"
-        >
-        <io.github.toyota32k.lib.player.view.PlayerSlider
-            android:id="@+id/player_slider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-
-    </LinearLayout>
     <TextView
         android:id="@+id/duration_label"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:fontFamily="monospace"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="5dp"
-        tools:text="99:99"
+        tools:text="99:99:99"
         />
-
-</LinearLayout>
+    <io.github.toyota32k.lib.player.view.PlayerSlider
+        android:id="@+id/player_slider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/duration_label"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
