--- a/libPlayer/src/main/res/drawable/ic_player_slider_marker.xml
+++ b/libPlayer/src/main/res/drawable/ic_player_slider_marker.xml
@@ -2,5 +2,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp" android:width="24dp" android:viewportWidth="24"
     android:viewportHeight="24"><path android:fillColor="#000000"
-    android:pathData="M 12 0L 6 24 12 20 18 24Z" />
+    android:pathData="M 12 0L 0 24 24 24" />
 </vector>
