--- a/libPlayer/src/main/res/layout/v2_slider_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_slider_panel.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:fontFamily="monospace"
         android:layout_gravity="center_vertical"
+        android:layout_marginStart="5dp"
         tools:text="00:00:00"
         />
     <TextView
