--- a/libPlayer/src/main/res/drawable/ic_prev_chapter.xml
+++ b/libPlayer/src/main/res/drawable/ic_prev_chapter.xml
@@ -4,5 +4,6 @@
     android:width="30dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#000" android:pathData="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z" />
+    <path android:fillColor="#000"
+        android:pathData="M6,18V6H8V18H6M9.5,12L18,6V18L9.5,12Z" />
 </vector>
