--- a/libPlayer/src/main/res/layout/v2_slider_panel.xml
+++ b/libPlayer/src/main/res/layout/v2_slider_panel.xml
@@ -35,5 +35,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/duration_label"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:ampAttrsByParent="true"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
